# HO_P2

./: .gitignore  CMakeLists.txt
include/: closed_list.hpp  maze.hpp  open_list.hpp  t_state.hpp
part1/: SATPaganitzu.java  run.sh
part1/maps/: dosMapa.txt  dosMapa.txt.output  lab12x30-part1.lab  lab30X30-part1.lab  lab6x19-part1.lab  lab6x6-part1.lab  labIrreg-part1.lab  labWrongChar-part1.lab  unoMapa.txt
part2/: compile.sh  run_test.sh
part2/include/: closed_list.hpp  s_agent.hpp  t_state.hpp
part2/src/: main.cpp  maze.cpp  open_list.cpp  s_agent.cpp  t_state.cpp
part2/testmaps/: testmap.txt.statistics
part3/: CMakeLists.txt  compile.sh  run_test.sh
part3/include/: maze.hpp  open_list.hpp  s_agent.hpp  t_state.hpp
part3/src/: main.cpp  maze.cpp  s_agent.cpp  t_state.cpp
part3/testmaps/: testmap.txt  testmap.txt.output
src/: CMakeLists.txt  main.cpp  maze.cpp  s_agent.cpp  t_state.cpp
testmaps/: basic_4x4.txt  basic_4x4.txt.output  basic_4x4.txt.statistics  difficullt.txt  hard.txt  imposible_4x4.txt  impossible_bigger.txt  medium_7x7.txt  medium_7x7.txt.output  medium_7x7.txt.statistics  normal_6x6.txt  testmap.txt
